src/objects/Attendance__c.object
<CustomObject>
    <description>Junction object to allow engagements to attend multiple sessions and for sessions to have multiple engagements.

Oscar Mawby @ Impact Box 12/12/19</description>
    <fields>
        <fullName>ApprovalDateTime__c</fullName>
        <description>Created by Oscar @ Impact Box 09/06/2020</description>
        <inlineHelpText>The Date/Time the Attendance was approved</inlineHelpText>
        <label>Approval Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <description>Created by Oscar @ Impact Box 09/06/2020</description>
        <inlineHelpText>Who Approved the Attendance</inlineHelpText>
        <label>Approved By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendanceMigrationNumber__c</fullName>
        <label>Attendance Migration Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AttendanceName__c</fullName>
        <description>Returns the record type and related session date as an attendance record.</description>
        <formula>LEFT(Engagement__r.ContactName__c,40) &amp; &quot; &quot; &amp; TEXT(Session__r.SessionDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendedSession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True = Attended session, False = Did not attend session

Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Attended Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancellationReason__c</fullName>
        <description>Created by Oscar @ Impact Box,30/07/2020</description>
        <inlineHelpText>TBC</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cancellation_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CohortId__c</fullName>
        <formula>CASESAFEID(Session__r.Cohort__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CohortId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPayRate__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <label>Contact Hours Pay Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContactPay__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <formula>IF( TutorPaid__c = FALSE,0,

SessionLengthhours__c *  ContactPayRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoverTutor__c</fullName>
        <formula>OR(

Engagement__r.CoverTutor__c = TRUE,

Engagement__r.PupilsTutor__r.CoverTutor__c = TRUE

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if related Tutor has been marked as a cover Tutor</inlineHelpText>
        <label>Cover Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedInLastDay__c</fullName>
        <description>Created by Oscar @ Impact Box, 08/07/2020</description>
        <formula>OR(

AND(

 DATEVALUE( CreatedDate )  &gt;= TODAY()-1,

 NOT(DATEVALUE( CreatedDate )  &gt;  TODAY()+1)

),

AND(

DATEVALUE( ApprovalDateTime__c ) &gt;= TODAY()-1,

NOT(DATEVALUE( ApprovalDateTime__c ) &gt; TODAY()+1)

),

AND(

TutorChangeDate__c &gt;= TODAY()-1,

NOT( TutorChangeDate__c &gt; TODAY()+1)

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If True this will be included in payment automation overnight where relevant payments records will be found, created or replaced.</inlineHelpText>
        <label>Created/Approved/TutorChangedInLastDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <formula>Session__r.EndDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>The Engagement record the attendance refers to

Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FunderId__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <formula>Session__r.Cohort__r.Funder__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funder Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMyAttendance__c</fullName>
        <description>Updated by Oscar @ Impact Box, 06/08/2020.

Updated formula to return on the basis of the tutor that is responsible for the attendance record itself rather than the pupils tutor on Pupils engagement. If a Tutor changes it updates attendance tutors in the future but not the past (via flow). This meant new tutors were seeing old tutors registers. 

Old formula for reference: 

OR(
Engagement__r.Pupil__r.CommunityUser__c = $User.Id ,
Engagement__r.PupilsTutor__r.Tutor__r.CommunityUser__c = $User.Id,
Engagement__r.Tutor__r.CommunityUser__r.Id = $User.Id
)</description>
        <formula>OR(

AND( RecordType.DeveloperName = &apos;Tutor&apos;, Engagement__r.Tutor__r.CommunityUser__r.Id = $User.Id),

AND( RecordType.DeveloperName = &apos;Pupil&apos;, Tutor__r.Tutor__r.CommunityUser__c   =  $User.Id)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a record as Migrated from legacy systems. Oscar Mawby @ Impact box 22/01/20</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonContactHoursPayRate__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <label>Non-Contact Hours Pay Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonContactPay__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <formula>IF( TutorPaid__c = FALSE,0,

NonContactHoursPayRate__c *  NonContactTimehours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Contact Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonContactTimePerSessionhours__c</fullName>
        <formula>Engagement__r.NonContactTimePerSessionhours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Contact Time Per Session (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonContactTimehours__c</fullName>
        <description>Created by Oscar @ Impact Box, 27/07/2020</description>
        <label>Non-Contact Time (hours)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Engagement__r.Cohort__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMonthNum__c</fullName>
        <description>Created by Oscar @ Impact Box, 08/06/2020</description>
        <formula>MONTH(ADDMONTHS(SessionDate__c,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>E.g. January = 1, December = 12.

Calculates based on Session Date Month + 1</inlineHelpText>
        <label>Tutor Payment Month Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tutor Payment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an &apos;outgoing&apos; tutor payment record for the Tutor Payment</errorMessage>
            <filterItems>
                <field>npe01__OppPayment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Outgoing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostApprovalEdit__c</fullName>
        <description>Created by Oscar @ Impact Box 09/06/2020</description>
        <inlineHelpText>Populates with the Date Time an edit was made after an approval</inlineHelpText>
        <label>Post Approval Edit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pupil__c</fullName>
        <formula>Engagement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pupil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisterCompletedDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 16/12/19</description>
        <label>Register Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegisterIncomplete__c</fullName>
        <description>Created by Oscar @ Impact Box 30/09/2020, for use in scheduled flow criteria.</description>
        <formula>AND( SessionDate__c &lt; TODAY(),  ISBLANK(RegisterCompletedDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if</inlineHelpText>
        <label>Register Due &amp; Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegisterName__c</fullName>
        <formula>IF( Engagement__r.Tutor__r.CommunityUser__c = $User.Id,
&quot;ME: &quot;, &quot;&quot;)&amp; Engagement__r.RegisterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisterReminderSendDate__c</fullName>
        <formula>CASE(WEEKDAY( SessionDateDate__c ),

1, DATETIMEVALUE(SessionDateDate__c )+ 1.375,

2, DATETIMEVALUE(SessionDateDate__c )+ 7.375,

3, DATETIMEVALUE(SessionDateDate__c )+ 6.375,

4, DATETIMEVALUE(SessionDateDate__c )+ 5.375,

5, DATETIMEVALUE(SessionDateDate__c )+ 3.375,

6, DATETIMEVALUE(SessionDateDate__c )+ 2.375,

7, DATETIMEVALUE(SessionDateDate__c )+ 1.375,

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register Reminder Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SchoolChargePerTutoringHour__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <label>School Charge Per Tutoring Hour</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SchoolPaymentAlreadySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Oscar @ Impact Box, 29/07/2020. Updated via flow.</description>
        <label>School Payment Already Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolPaymentMonthNum__c</fullName>
        <description>Created by Oscar @ Impact Box, 08/07/2020</description>
        <formula>MONTH(  SessionDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Payment Month Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchoolPaymentYear__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>TEXT(YEAR(  SessionDate__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Payment Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Payment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an incoming School Payment record</errorMessage>
            <filterItems>
                <field>npe01__OppPayment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Incoming</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Attendances (School Payment)</relationshipLabel>
        <relationshipName>Attendances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionCancelled__c</fullName>
        <formula>Session__r.SessionCancelled__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionDateDate__c</fullName>
        <description>Set by process builder to be used in roll-up

Oscar Mawby @ Impact Box, 19/01/2020</description>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SessionDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 14/01/2020</description>
        <formula>Session__r.SessionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SessionLength__c</fullName>
        <formula>Session__r.SessionLengthHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionLengthhours__c</fullName>
        <description>The Session length of this attendance, populated via process builder on update of session. 

Oscar Mawby @ Impact Box 19/12/19</description>
        <inlineHelpText>The Session length of this attendance, populated via process builder on update of session.</inlineHelpText>
        <label>Session Length (hours)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShowInRegister__c</fullName>
        <formula>OR(
ISBLANK(  $User.ContactId ),
ISBLANK( Engagement__r.Pupil__c ) = FALSE,
 Engagement__r.Tutor__r.CommunityUser__c =  $User.Id 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show In Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <formula>Session__r.StartDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalTutorPay__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <formula>ContactPay__c +  NonContactPay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tutor Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TutorChangeDate__c</fullName>
        <description>Created By Oscar @ Impact Box, 17/08/2020</description>
        <label>TutorChangeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TutorContactId__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <formula>Engagement__r.Tutor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TutorContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorEmail__c</fullName>
        <description>Created by Sharmin @ Impact Box</description>
        <label>Tutor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TutorId__c</fullName>
        <formula>CASESAFEID( Engagement__r.PupilsTutor__r.Tutor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TutorId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorName__c</fullName>
        <formula>IF(

 RecordType.DeveloperName = &apos;Pupil&apos;,  Engagement__r.PupilsTutor__r.ContactName__c,

 Engagement__r.ContactName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorPaid__c</fullName>
        <description>Created by Oscar @ Impact Box, 11/08/2020</description>
        <formula>OR(ISPICKVAL( Session__r.CancellationReason__c,&apos;School Cancelled Tutor Paid&apos;), ISBLANK(TEXT(Session__r.CancellationReason__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will the tutor be paid for this attendance and school be charged? Determined by cancellation reason on the session.</inlineHelpText>
        <label>Include in Payment Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TutorPaymentYear__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>TEXT(YEAR( ADDMONTHS( SessionDate__c,1) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Payment Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tutor that is responsible for recording this attendance. 

Oscar Mawby @ Impact Box 17/12/19</description>
        <inlineHelpText>The Tutor that is responsible for recording this attendance.</inlineHelpText>
        <label>Pupil&apos;s Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Engagement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tutor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Tutor&apos;s Pupil Attendances</relationshipLabel>
        <relationshipName>TutorAttendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnplannedAttendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True = Pupil or Tutor was not originally planned to be at session

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>True = Pupil or Tutor was not originally planned to be at session</inlineHelpText>
        <label>Unplanned Attendance</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AttendancesToComplete</fullName>
        <columns>Session__c</columns>
        <columns>Pupil__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyAttendance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SessionDateDate__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RegisterCompletedDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>Registers To Complete</label>
    </listViews>
    <listViews>
        <fullName>Completed_Registers</fullName>
        <columns>Session__c</columns>
        <columns>Pupil__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyAttendance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Completed Registers</label>
    </listViews>
    <listViews>
        <fullName>IncompleteRegisters</fullName>
        <columns>NAME</columns>
        <columns>SessionDateDate__c</columns>
        <columns>TutorName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SessionDateDate__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RegisterCompletedDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>Incomplete Registers</label>
    </listViews>
    <listViews>
        <fullName>My_tutoring_Sessions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SessionCancelled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IsMyAttendance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Tutoring Sessions</label>
    </listViews>
    <listViews>
        <fullName>Tutor_Attendances2</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>CreatedInLastDay__c</columns>
        <columns>SchoolPayment__c</columns>
        <columns>Payment__c</columns>
        <columns>NonContactHoursPayRate__c</columns>
        <columns>ContactPayRate__c</columns>
        <columns>SchoolChargePerTutoringHour__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Tutor</value>
        </filters>
        <filters>
            <field>OpportunityId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>FunderId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Tutor Attendances</label>
    </listViews>
    <listViews>
        <fullName>Tutor_Attendances_Created_in_Last_Day</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>CreatedInLastDay__c</columns>
        <columns>SchoolPayment__c</columns>
        <columns>Payment__c</columns>
        <columns>NonContactHoursPayRate__c</columns>
        <columns>ContactPayRate__c</columns>
        <columns>SchoolChargePerTutoringHour__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Tutor</value>
        </filters>
        <filters>
            <field>OpportunityId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>FunderId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CreatedInLastDay__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tutor Attendances Created in Last Day</label>
    </listViews>
    <listViews>
        <fullName>Tutor_Attendances_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>RegisterCompletedDate__c</columns>
        <columns>TotalTutorPay__c</columns>
        <columns>AttendedSession__c</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Tutor</value>
        </filters>
        <label>Tutor Attendances for Approval</label>
    </listViews>
    <nameField>
        <label>Attendance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <recordTypes>
        <fullName>Pupil</fullName>
        <active>true</active>
        <description>If the attendance record relates to Pupil engagement.</description>
        <label>Pupil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tutor</fullName>
        <active>true</active>
        <description>If the attendance record relates to Tutor engagement.</description>
        <label>Tutor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Approve_Until_Register_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISBLANK(RegisterCompletedDate__c), OR( TEXT(ApprovalStatus__c)=&quot;Approved&quot;, TEXT(ApprovalStatus__c)=&quot;Rejected&quot;)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>You cannot approve or reject a Tutor&apos;s Attendance until the register has been completed for the session in question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tutor_Cant_Reparent</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

$User.ProfileId = &apos;00e3z000001VG5f&apos;,

NOT(ISNEW()),

OR(

 ISCHANGED(Engagement__c),

 ISCHANGED(Session__c))

)</errorConditionFormula>
        <errorMessage>A Tutor User cannot edit these fields</errorMessage>
    </validationRules>
</CustomObject>